@@ -270,7 +270,6 @@ public final class MimeType implements Comparable<MimeType>, Serializable {
         }
     }
 
-
     void addMagic(Magic magic) {
         if (magic == null) {
             return;
